fixed multiple export character items wrapping

--- a/styles/ExportProjectContainer.module.css
+++ b/styles/ExportProjectContainer.module.css
@@ -48,8 +48,6 @@
 }
 
 .export-characters-list {
-    display: inline-grid;
-    justify-items: start;
     margin-top: 16px;
 }
 
@@ -68,11 +66,17 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 10px;
+    gap: 16px;
 
-    padding-block: 4px;
+    padding-block: 8px;
     padding-inline: 14px;
     background-color: var(--secondary-bg);
     border-radius: 6px;
     width: max-content;
+}
+
+.character-export-item-wrapper {
+    display: inline-block;
+    margin-right: 6px;
+    margin-bottom: 6px;
 }
